<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        />

    <ImageView
        android:id="@+id/img_pinmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_location_pin_24"
        app:tint="@color/orange"
        android:layout_below="@+id/txt_name"
        android:layout_alignStart="@+id/txt_name"
        />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/img_pinmap"
        android:text="@string/location"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_location"
        android:text="@string/deskripsi"
        android:background="@drawable/description_box"
        android:padding="15dp"
        android:layout_alignStart="@id/txt_name"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_katalog"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/txt_desc"
        android:layout_alignStart="@id/txt_name"
        android:layout_marginTop="45dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/Katalog"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:icon="@drawable/baseline_manage_search_24"
        app:iconGravity="textTop"
        app:iconSize="80dp"
        app:iconTint="@color/orange" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_tender"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/Tender"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/button_katalog"
        android:layout_marginEnd="45dp"
        app:icon="@drawable/baseline_bookmark_added_24"
        app:iconTint="@color/orange"
        app:iconGravity="textTop"
        app:iconSize="80dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_statistik"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/button_katalog"
        android:layout_alignStart="@id/txt_name"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/Katalog"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:icon="@drawable/baseline_insert_chart_24"
        app:iconGravity="textTop"
        app:iconSize="80dp"
        app:iconTint="@color/orange" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_pengaturan"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/Pengaturan"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:layout_alignTop="@id/button_statistik"
        android:layout_alignStart="@+id/button_tender"
        app:icon="@drawable/baseline_settings_24"
        app:iconTint="@color/orange"
        app:iconGravity="textTop"
        app:iconSize="80dp" />


</RelativeLayout>